--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cypress": "^7.5.0"
   },
   "dependencies": {
-    "ajv": "^8.6.0"
+    "ajv": "^8.6.0",
+    "swagger-diff": "^0.6.0"
   }
 }
